# XAI_time_series

./: .gitignore  README.md  alpha_complexity_loyalty.py  conv_model.py  evaluation.py  evaluation_no_simp.py  generate_approximation_for_all.py  generate_simplified_prototypes.py  generate_user_study.py  guide.ipynb  guide_adiac.ipynb  main.py  make_full_survey.py  model_explanation.py  nohup.out  num_segments.csv  prompt_simplifications.py  pyproject.toml  run_no_simp.py  server_fastapi.py  simplifications.py  testAUC.ipynb  testing.ipynb  train_conv_model.py  train_model.py  train_models.py  tsEVO.ipynb  web_page.py
ORSalgorithm/: ORS_algorithm.py  ORSalgorithm.py  REEDME.md
PivotEval/: SHAP_kernel.py  compare_y.py  frequency.py
SearchOptimalValue/: binarySearchWLocal.py  findMaxLoyaltyGivenComplexity.py
Utils/: SAX.py  conv_model.py  dataTypes.py  generate_synthetic_data.py  get_binary_datasets.py  get_ts_characteristics.py  load_data.py  load_models.py  metrics.py  plotting.py  selectPrototypes.py  tsv_to_numpy.py
data/: .~lock.DataSummary.csv#  DataSummary.csv  DataSummary_gpt_generated.csv
generate_user_survey/: configurations.py  display_selected_kneepoints.py  find_alpha_for_loyalty.py  find_prototypes.py  get_train_and_test_instances.py  make_full_survey.py  test_selection.py
llm_tests/: prompt_simplifications.py
models/: ItalyPowerDemand_base_norm.pth  chinatown_base.pth  chinatown_base_norm.pth  chinatown_knn_norm.pkl  chinatown_linear-regression_norm.pkl  ecg200_base.pth  ecg200_dt_norm.pkl  ecg200_knn_norm.pkl  italy_base.pth  italypowerdemand_dt_norm.pkl
prototypes/: selectPrototypes.py
pythonServer/: classifyTimeSeries.py  generateCF.py  getConfidence.py  getTimeSeries.py  simplification.py
results/: .~lock.results.csv#  global_results.ipynb  models.xlsx  results.csv  time_log.csv
static/: script.js  style.css
templates/: index.html  plot.html
threshold_results/: avg_complexity_by_length_OS_80.csv  avg_complexity_by_length_OS_85.csv  avg_complexity_by_length_OS_90.csv  avg_complexity_by_length_OS_95.csv  avg_complexity_by_length_RDP_80.csv  (+3 more)
(+1571 files in other folders)
