[project]
name = "xai-time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
