[project]
name = "xai-tsc"
version = "0.0.1"
description = ""
authors = [
    {name = "femartip",email = "felix.marti99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "rdp (>=0.8,<0.9)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "kneed (>=0.8.5,<0.9.0)",
    "tslearn (>=0.6.3,<0.7.0)",
    "scikit-learn-extra (>=0.3.0,<0.4.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.7.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "simplification (==0.7.12)",
    "torcheval (>=0.0.7,<0.0.8)",
    "h5py (>=3.13.0,<4.0.0)",
    "openai (>=1.90.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "numpy (==1.26.4)",
    "pyts (>=0.13.0,<0.14.0)",
    "sktime (>=0.39.0,<0.40.0)",
    "reportlab (>=4.4.4,<5.0.0)",
    "tbb (>=2022.3.0,<2023.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
